--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,9 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="style" href="styles.css">
 </head>
-<body>
-  <app-root></app-root>
-</body>
+  <body >
+    <app-root></app-root>
+  </body>
 </html>
